--- a/code-editor/package.json
+++ b/code-editor/package.json
@@ -14,6 +14,8 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "monaco-themes": "^0.4.4",
+    "mongodb": "^5.2.0",
+    "mongoose": "^7.0.3",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-collapse": "^5.1.1",
