--- a/code-editor/package.json
+++ b/code-editor/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.5.0",
     "axios": "^1.3.5",
+    "dotenv": "^16.0.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "monaco-themes": "^0.4.4",
