--- a/code-editor/package.json
+++ b/code-editor/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.5.0",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.3.5",
     "dotenv": "^16.0.3",
     "eslint": "8.38.0",
